--- a/BirdWatcher/BirdWatcher/Gallery.xaml
+++ b/BirdWatcher/BirdWatcher/Gallery.xaml
@@ -1,66 +1,67 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BirdWatcher.Gallery">
-    <ContentPage.Resources>
-        <Style TargetType="Grid">
-            <Setter Property="VisualStateManager.VisualStateGroups">
-                <VisualStateGroupList>
-                    <VisualStateGroup x:Name="CommonStates">
-                        <VisualState x:Name="Normal" />
-                        <VisualState x:Name="Selected">
-                            <VisualState.Setters>
-                                <Setter Property="BackgroundColor"
-                                        Value="LightGray" />
-                            </VisualState.Setters>
-                        </VisualState>
-                    </VisualStateGroup>
-                </VisualStateGroupList>
-            </Setter>
-        </Style>
-    </ContentPage.Resources>
-    <ContentPage.Content>
-
-        <StackLayout>
-                    <CollectionView x:Name="birdCollection">
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate>
-                        <SwipeView>
-                            <SwipeView.RightItems>
-                                <SwipeItems SwipeBehaviorOnInvoked="RemainOpen">
-                                    <SwipeItem Text="Delete" BackgroundColor="DarkGray" 
-                                               Invoked="DeleteItem_Invoked"
-                                               BindingContext="{Binding ID}">
-                                    </SwipeItem>
-                                </SwipeItems>
-                            </SwipeView.RightItems>
-                            <Grid Padding="8">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto" />
-                                        <RowDefinition Height="Auto" />
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition Width="Auto" />
-                                    </Grid.ColumnDefinitions>
-                                    <Image Grid.RowSpan="2"
-                       Source="{Binding ImageUrl}"
-                       Aspect="AspectFill"
-                       HeightRequest="60"
-                       WidthRequest="60" />
-                                    <Label Grid.Column="1"
-                       Text="{Binding Name}"
-                       FontAttributes="Bold" />
-                                    <Label Grid.Row="1"
-                       Grid.Column="1"
-                       Text="{Binding Location}"
-                       FontAttributes="Italic"
-                       VerticalOptions="End" />
-                                </Grid>
-                            </SwipeView>
-                    </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
-                </StackLayout>
-    </ContentPage.Content>
+<ContentPage
+	xmlns="http://xamarin.com/schemas/2014/forms"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 x:Class="BirdWatcher.Gallery">
+	<ContentPage.Resources>
+		<Style TargetType="Grid">
+			<Setter Property="VisualStateManager.VisualStateGroups">
+				<VisualStateGroupList>
+					<VisualStateGroup x:Name="CommonStates">
+						<VisualState x:Name="Normal" />
+						<VisualState x:Name="Selected">
+							<VisualState.Setters>
+								<Setter Property="BackgroundColor"
+										Value="LightGray" />
+							</VisualState.Setters>
+						</VisualState>
+					</VisualStateGroup>
+				</VisualStateGroupList>
+			</Setter>
+		</Style>
+	</ContentPage.Resources>
+	<ContentPage.Content>
+		<StackLayout>
+			<CollectionView x:Name="birdCollection">
+				<CollectionView.ItemTemplate>
+					<DataTemplate>
+						<SwipeView>
+							<SwipeView.RightItems>
+								<SwipeItems SwipeBehaviorOnInvoked="RemainOpen">
+									<SwipeItem Text="Delete" BackgroundColor="DarkGray" 
+											   Invoked="DeleteItem_Invoked"
+											   CommandParameter="{Binding .}"></SwipeItem>
+									<SwipeItem Text="Edit"
+											   BackgroundColor="LightPink"
+											   Invoked="SwipeItem_Invoked"
+											   CommandParameter="{Binding .}"></SwipeItem>
+								</SwipeItems>
+							</SwipeView.RightItems>
+							<Grid Padding="8">
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto" />
+									<ColumnDefinition Width="Auto" />
+								</Grid.ColumnDefinitions>
+								<Image Grid.RowSpan="2"
+					   Source="{Binding ImageUrl}"
+					   Aspect="AspectFill"
+					   HeightRequest="60"
+					   WidthRequest="60" />
+								<Label Grid.Column="1" Text="{Binding Name}"
+					   FontAttributes="Bold" />
+								<Label Grid.Row="1" Grid.Column="1"
+					   Text="{Binding Location}"
+					   FontAttributes="Italic"
+					   VerticalOptions="End" />
+							</Grid>
+						</SwipeView>
+					</DataTemplate>
+				</CollectionView.ItemTemplate>
+			</CollectionView>
+		</StackLayout>
+	</ContentPage.Content>
 </ContentPage>
