Edit Page Update

--- a/BirdWatcher/BirdWatcher/Gallery.xaml
+++ b/BirdWatcher/BirdWatcher/Gallery.xaml
@@ -37,6 +37,7 @@
 											   CommandParameter="{Binding .}"></SwipeItem>
 								</SwipeItems>
 							</SwipeView.RightItems>
+
 							<Grid Padding="8">
 								<Grid.RowDefinitions>
 									<RowDefinition Height="Auto" />
@@ -46,17 +47,19 @@
 									<ColumnDefinition Width="Auto" />
 									<ColumnDefinition Width="Auto" />
 								</Grid.ColumnDefinitions>
-								<Image Grid.RowSpan="2"
-					   Source="{Binding ImageUrl}"
-					   Aspect="AspectFill"
-					   HeightRequest="60"
-					   WidthRequest="60" />
+
+								<Image Grid.RowSpan="2" 
+									   Source="{Binding ImageUrl}"
+									   Aspect="AspectFill"
+									   HeightRequest="60"
+									   WidthRequest="60">
+								</Image>
 								<Label Grid.Column="1" Text="{Binding Name}"
-					   FontAttributes="Bold" />
+										FontAttributes="Bold" />
 								<Label Grid.Row="1" Grid.Column="1"
-					   Text="{Binding Location}"
-					   FontAttributes="Italic"
-					   VerticalOptions="End" />
+									   Text="{Binding Location}"
+									   FontAttributes="Italic"
+									   VerticalOptions="End" />
 							</Grid>
 						</SwipeView>
 					</DataTemplate>
